--- a/index_new.html
+++ b/index_new.html
@@ -5,29 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>Тосочка: Залповый огонь</title>
     <style>
-        /* Стили для заставки */
-        #splashScreen {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: black;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 9999;
-            opacity: 1;
-            transition: opacity 1s ease-in-out;
-        }
-
-        #splashScreen img {
-            max-width: 100%;
-            max-height: 100%;
-            object-fit: contain;
-        }
-
-        /* Основные стили */
         body {
             margin: 0;
             overflow: hidden;
@@ -43,7 +20,7 @@
             display: flex;
             align-items: flex-start;
             gap: 20px;
-            margin-bottom: 15vh;
+            margin-bottom: 15vh; /* Отступ снизу для сенсорной зоны */
         }
         canvas {
             border: 2px solid white;
@@ -51,18 +28,18 @@
         }
         #touchpad {
             position: fixed;
-            bottom: -10px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: calc(var(--game-width) + 8px);
-            height: 15vh;
+            bottom: -10px; /* Сенсорная зона на 10px ниже нижней границы холста */
+            left: 50%; /* Центрируем по горизонтали */
+            transform: translateX(-50%); /* Смещаем на половину ширины */
+            width: calc(var(--game-width) + 8px); /* Ширина сенсорной зоны равна ширине холста + 8px (рамка) */
+            height: 15vh; /* Высота сенсорной зоны */
             background-color: rgba(255, 255, 255, 0.1);
-            border-radius: 10px;
+            border-radius: 10px; /* Закругленные углы */
             z-index: 1000;
             touch-action: none;
         }
         #scoreModal {
-            display: none;
+            display: flex;
             position: fixed;
             top: 0;
             left: 0;
@@ -120,8 +97,9 @@
             padding: 20px;
             box-sizing: border-box;
         }
+        /* Стили для модального окна с инструкцией */
         #instructionModal {
-            display: none;
+            display: none; /* Скрыто по умолчанию */
             position: fixed;
             top: 0;
             left: 0;
@@ -140,8 +118,8 @@
             width: 90%;
             max-width: 600px;
             max-height: 80vh;
-            overflow-y: auto;
-            touch-action: pan-y;
+            overflow-y: auto; /* Включаем вертикальную прокрутку */
+            touch-action: pan-y; /* Разрешаем прокрутку на touch-устройствах */
         }
         #instructionModalContent h2 {
             margin-top: 0;
@@ -164,12 +142,17 @@
     </style>
 </head>
 <body>
-    <!-- Заставка -->
-    <div id="splashScreen">
-        <img src="splash.jpg" alt="Заставка">
-    </div>
-
-    <!-- Основной контейнер игры -->
+        <!-- Заставка в iframe -->
+		<iframe id="splashFrame" src="splash.html" style="width: 100%; height: 100%; border: none; position: fixed; top: 0; left: 0; z-index: 1000;"></iframe>
+		<script>
+		// Удаляем iframe с заставкой через 5 секунд
+		setTimeout(() => {
+		const splashFrame = document.getElementById('splashFrame');
+        if (splashFrame) {
+		splashFrame.remove(); // Удаляем iframe
+        }
+		}, 5000);
+		</script>
     <div id="gameContainer">
         <canvas id="gameCanvas"></canvas>
     </div>
@@ -189,6 +172,7 @@
             <div>Уровень: <span id="modalLevel">1</span></div>
             <div>Сложность: <span id="modalDifficultyLevel">0</span></div>
             <div>Здоровье: <span id="modalHealthDisplay">100%</span></div>
+            <!-- Новая кнопка "Инструкция по выживанию" -->
             <button id="instructionButton">Инструкция по выживанию</button>
             <button id="restartButton">Начать игру</button>
         </div>
@@ -240,28 +224,6 @@
     <audio id="defeatSound" src="defeat.ogg"></audio>
 
     <script>
-        // Заставка
-        document.addEventListener('DOMContentLoaded', () => {
-            const splashScreen = document.getElementById('splashScreen');
-
-            // Показываем заставку
-            splashScreen.style.opacity = '1';
-
-            // Через 5 секунд начинаем скрывать заставку
-            setTimeout(() => {
-                splashScreen.style.opacity = '0';
-
-                // После завершения анимации скрытия удаляем заставку
-                splashScreen.addEventListener('transitionend', () => {
-                    splashScreen.remove();
-
-                    // Показываем основное меню
-                    document.getElementById('scoreModal').style.display = 'flex';
-                }, { once: true }); // Обработчик сработает только один раз
-            }, 5000); // 5000 мс = 5 секунд
-        });
-
-        // Остальной JavaScript-код
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
 
@@ -361,10 +323,10 @@
         let blinkAnimationFrame;
 
         function createRandomExplosionsAroundPlayer() {
-            const explosionCount = 5;
+            const explosionCount = 5; // Количество взрывов за один вызов
             for (let i = 0; i < explosionCount; i++) {
-                const angle = Math.random() * Math.PI * 2;
-                const distance = Math.random() * 50 + 30;
+                const angle = Math.random() * Math.PI * 2; // Случайный угол
+                const distance = Math.random() * 50 + 30; // Случайное расстояние от игрока (30-80 пикселей)
                 const x = player.x + player.width / 2 + Math.cos(angle) * distance;
                 const y = player.y + player.height / 2 + Math.sin(angle) * distance;
 
@@ -375,45 +337,52 @@
         function handleDefeat() {
             defeatHandled = true;
 
+            // Останавливаем игровой цикл
             cancelAnimationFrame(gameLoop);
 
+            // Блокируем управление
             isTouching = false;
             isTap = false;
 
+            // Запускаем интервал для создания взрывов
             explosionInterval = setInterval(() => {
                 createRandomExplosionsAroundPlayer();
-            }, 300);
+            }, 300); // Взрывы каждые 0.3 секунды
 
+            // Начинаем моргание
             startBlinking();
 
+            // Проигрываем звук поражения
             const defeatSound = document.getElementById('defeatSound');
             defeatSound.currentTime = 0;
             defeatSound.play();
 
+            // Ждем завершения звука и переходим в меню
             defeatSound.onended = () => {
-                clearInterval(explosionInterval);
-                stopBlinking();
+                clearInterval(explosionInterval); // Останавливаем создание взрывов
+                stopBlinking(); // Останавливаем моргание
                 updateHighScore();
                 stopBackgroundMusic();
                 updateScoreboard();
                 document.getElementById('scoreModal').style.display = 'flex';
-                defeatHandled = false;
+                defeatHandled = false; // Сбрасываем флаг для следующей игры
             };
         }
 
         function startBlinking() {
             isPlayerBlinking = true;
-            blinkAnimationFrame = requestAnimationFrame(blinkLoop);
+            blinkAnimationFrame = requestAnimationFrame(blinkLoop); // Запускаем цикл моргания
         }
 
         function stopBlinking() {
             isPlayerBlinking = false;
-            cancelAnimationFrame(blinkAnimationFrame);
+            cancelAnimationFrame(blinkAnimationFrame); // Останавливаем цикл моргания
         }
 
         function blinkLoop() {
-            if (!isPlayerBlinking) return;
+            if (!isPlayerBlinking) return; // Останавливаем цикл, если моргание завершено
 
+            // Очищаем холст и рисуем игрока с эффектом моргания
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             drawBackground();
             drawEnemies();
@@ -421,6 +390,7 @@
             drawExplosions();
             drawHealthBar();
 
+            // Моргание игрока
             if (isPlayerVisible()) {
                 const sway = Math.sin(Date.now() / 200) * 2;
                 if (playerImage.complete) {
@@ -428,11 +398,13 @@
                 }
             }
 
+            // Продолжаем цикл моргания
             blinkAnimationFrame = requestAnimationFrame(blinkLoop);
         }
 
         function isPlayerVisible() {
-            return Math.floor(Date.now() / 100) % 2 === 0;
+            // Возвращает true, если игрок должен быть видимым в текущий момент моргания
+            return Math.floor(Date.now() / 100) % 2 === 0; // Видим каждые 100 мс
         }
 
         function playInfantryHitSound() {
@@ -447,6 +419,7 @@
             sound.play();
         }
 
+        // Логика для сенсорного ползунка
         const touchpad = document.getElementById('touchpad');
         let isTouching = false;
         let touchStartX = 0;
@@ -456,7 +429,7 @@
         touchpad.addEventListener('touchstart', (e) => {
             isTouching = true;
             const touchpadRect = touchpad.getBoundingClientRect();
-            touchStartX = e.touches[0].clientX - touchpadRect.left;
+            touchStartX = e.touches[0].clientX - touchpadRect.left; // Относительно левого края сенсорной зоны
             playerStartX = player.x;
             isTap = true;
         });
@@ -465,7 +438,7 @@
             if (!isTouching) return;
 
             const touchpadRect = touchpad.getBoundingClientRect();
-            const touchCurrentX = e.touches[0].clientX - touchpadRect.left;
+            const touchCurrentX = e.touches[0].clientX - touchpadRect.left; // Относительно левого края сенсорной зоны
             const deltaX = touchCurrentX - touchStartX;
 
             if (Math.abs(deltaX) > 5) {
@@ -484,12 +457,14 @@
             isTap = false;
         });
 
+        // Обработчик для паузы
         canvas.addEventListener('touchstart', (e) => {
-            const touchY = e.touches[0].clientY;
+            const touchY = e.touches[0].clientY; // Получаем координату Y касания
 
+            // Проверяем, что касание было выше сенсорной зоны управления
             const touchpadRect = touchpad.getBoundingClientRect();
             if (touchY < touchpadRect.top) {
-                togglePause();
+                togglePause(); // Ставим игру на паузу или снимаем с паузы
             }
         });
 
@@ -523,7 +498,7 @@
         }
 
         function drawPlayer() {
-            if (isPlayerBlinking && !isPlayerVisible()) return;
+            if (isPlayerBlinking && !isPlayerVisible()) return; // Не отображаем игрока, если идет моргание и он невидим
 
             const sway = Math.sin(Date.now() / 200) * 2;
             if (playerImage.complete) {
@@ -876,7 +851,7 @@
             gameOver = false;
             defeatHandled = false;
             clearInterval(explosionInterval);
-            stopBlinking();
+            stopBlinking(); // Останавливаем моргание
             document.getElementById('scoreModal').style.display = 'none';
             score = 0;
             infantryCount = 0;
@@ -1019,22 +994,27 @@
         }
 
         function resizeCanvas() {
-            const maxWidth = 400;
-            const touchpadHeight = 0.15 * window.innerHeight;
+            const maxWidth = 400; // Максимальная ширина игрового поля
+            const touchpadHeight = 0.15 * window.innerHeight; // Высота сенсорной зоны (15% от высоты экрана)
 
+            // Рассчитываем ширину и высоту холста
             gameWidth = Math.min(window.innerWidth - 40, maxWidth);
-            gameHeight = window.innerHeight - touchpadHeight;
+            gameHeight = window.innerHeight - touchpadHeight; // Высота минус сенсорная зона
 
+            // Устанавливаем размеры холста
             canvas.width = gameWidth;
             canvas.height = gameHeight;
 
+            // Позиционируем холст по центру горизонтально и вверху вертикально
             canvas.style.position = 'absolute';
-            canvas.style.left = '50%';
-            canvas.style.transform = 'translateX(-50%)';
+            canvas.style.left = '50%'; // Центрируем по горизонтали
+            canvas.style.transform = 'translateX(-50%)'; // Смещаем на половину ширины холста
             canvas.style.top = '0';
 
+            // Устанавливаем ширину сенсорной зоны равной ширине холста + 4px (рамка)
             document.documentElement.style.setProperty('--game-width', `${gameWidth}px`);
 
+            // Пересчитываем позицию игрока, чтобы он оставался по центру внизу
             player.x = canvas.width / 2 - player.width / 2;
             player.y = canvas.height - 40;
         }
@@ -1043,14 +1023,14 @@
             const isPortrait = window.innerHeight > window.innerWidth;
 
             if (!isPortrait) {
-                isPaused = true;
-                stopBackgroundMusic();
-                showOrientationWarning();
+                isPaused = true; // Ставим игру на паузу
+                stopBackgroundMusic(); // Останавливаем фоновую музыку
+                showOrientationWarning(); // Показываем предупреждение
             } else {
-                isPaused = false;
-                startBackgroundMusic();
-                hideOrientationWarning();
-                resizeCanvas();
+                isPaused = false; // Снимаем с паузы, если ориентация правильная
+                startBackgroundMusic(); // Возобновляем фоновую музыку
+                hideOrientationWarning(); // Скрываем предупреждение
+                resizeCanvas(); // Обновляем размеры холста
             }
         }
 
@@ -1083,18 +1063,21 @@
             }
         }
 
+        // Проверка ориентации при загрузке страницы и изменении размера окна
         checkOrientation();
         window.addEventListener('resize', () => {
-            checkOrientation();
-            resizeCanvas();
+            checkOrientation(); // Проверяем ориентацию
+            resizeCanvas(); // Обновляем размеры холста
         });
 
+        // Запрет масштабирования на touch-устройствах
         document.addEventListener('touchmove', function (event) {
             if (event.scale !== 1) {
-                event.preventDefault();
+                event.preventDefault(); // Запрещаем масштабирование
             }
         }, { passive: false });
 
+        // Ожидание загрузки всех изображений
         Promise.all([
             new Promise((resolve) => { playerImage.onload = resolve; }),
             new Promise((resolve) => { infantryImage.onload = resolve; }),
@@ -1102,35 +1085,40 @@
             new Promise((resolve) => { rocketLauncherImage.onload = resolve; }),
             new Promise((resolve) => { backgroundImage.onload = resolve; })
         ]).then(() => {
-            resizeCanvas();
+            resizeCanvas(); // Устанавливаем начальные размеры холста
             document.getElementById('scoreModal').style.display = 'flex';
         });
 
+        // Логика для модального окна с инструкцией
         const instructionModal = document.getElementById('instructionModal');
         const instructionButton = document.getElementById('instructionButton');
         const instructionModalContent = document.getElementById('instructionModalContent');
 
+        // Открываем модальное окно с инструкцией
         instructionButton.addEventListener('click', () => {
             instructionModal.style.display = 'flex';
         });
 
+        // Закрываем модальное окно при клике в любом месте
         instructionModal.addEventListener('click', () => {
             instructionModal.style.display = 'none';
         });
 
+        // Обработка прокрутки текста внутри модального окна
         let startY = 0;
 
         instructionModalContent.addEventListener('touchstart', (e) => {
-            startY = e.touches[0].clientY;
+            startY = e.touches[0].clientY; // Запоминаем начальную позицию касания
         });
 
         instructionModalContent.addEventListener('touchmove', (e) => {
             const currentY = e.touches[0].clientY;
-            const deltaY = startY - currentY;
+            const deltaY = startY - currentY; // Вычисляем разницу по Y
 
+            // Прокручиваем содержимое
             instructionModalContent.scrollBy(0, deltaY);
 
-            startY = currentY;
+            startY = currentY; // Обновляем начальную позицию
         });
     </script>
 </body>
